--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/recharts": "^1.8.17",
     "bootstrap": "^4.5.3",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
@@ -17,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-moment": "^1.0.0",
     "react-scripts": "4.0.1",
+    "recharts": "^1.8.5",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
